@@ -10,7 +10,5 @@ LIBNIFALCON_COMM_VAR_SETUP()
 
 LIST(APPEND NP_EXE_CPP_LINK_LIBS ${LIBNIFALCON_REQ_LIBS})
 
-
 ADD_SUBDIRECTORY(findfalcons)
 ADD_SUBDIRECTORY(falcon_test_cli)
-ADD_SUBDIRECTORY(falcon_test_qt)
