@@ -1,18 +1,0 @@
-#-------------------------------------------------
-#
-# Project created by QtCreator 2009-02-16T15:33:48
-#
-#-------------------------------------------------
-
-QT       += opengl
-
-TARGET = FalconTestQt
-TEMPLATE = app
-
-
-SOURCES += main.cpp\
-        falcontestqt.cpp
-
-HEADERS  += falcontestqt.h
-
-FORMS    += falcontestqt.ui
