@@ -1,27 +1,0 @@
-<ui version="4.0" stdsetdef="1" >
- <class>FalconTestQtClass</class>
- <widget class="QMainWindow" name="FalconTestQtClass" >
-  <property name="objectName" >
-   <cstring>FalconTestQtClass</cstring>
-  </property>
-  <property name="geometry" >
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>600</width>
-    <height>400</height>
-   </rect>
-  </property>
-  <property name="windowTitle" >
-   <string>FalconTestQt</string>
-  </property>
-  <widget class="QMenuBar" name="menuBar" />
-  <widget class="QToolBar" name="mainToolBar" />
-  <widget class="QWidget" name="centralWidget" />
-  <widget class="QStatusBar" name="statusBar" />
- </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
- <resources/>
- <connections/>
-</ui>
